<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hyman="http://schemas.android.com/apk/res/com.example.assignment"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.example.slidingmenu.view.SlidingMenu
        android:id="@+id/id_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        hyman:rightPadding="75dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <include layout="@layout/left_menu" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_background" >

                <Button
                    android:id="@+id/menu_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toggleMenu"
                    android:text="@string/menu_button" />

               
                <ImageView
                    android:id="@+id/batmanvssuperman_imageview"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/batmanvsuperman" />

                <TextView
                    android:id="@+id/batmanvssuperman_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignTop="@+id/batmanvssuperman_imageview"
                    android:layout_toRightOf="@+id/batmanvssuperman_imageview" 
                    android:text="@string/batmanvssuperman_text"
                    />
                <ImageView
                 
                    android:id="@+id/avengers2_imageview"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_below="@+id/batmanvssuperman_imageview"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/avengers2_imageview" />

                <TextView
                    android:id="@+id/avenger2_text1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignTop="@+id/avengers2_imageview"
                    android:layout_toRightOf="@+id/avengers2_imageview"
                    android:text="@string/avengers2_text1"
                    />
            
                 <TextView
                    android:id="@+id/avenger2_text2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/avenger2_text1"
                    android:layout_toRightOf="@+id/avengers2_imageview"
                    android:text="@string/avengers2_text2"
                    />
                <Button
                    android:id="@+id/moreMoive_button"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="more movie" />
                 
                
                
                
            </RelativeLayout>
        </LinearLayout>
    </com.example.slidingmenu.view.SlidingMenu>

</RelativeLayout>